# SNS-ELEC0088

./: README.md  main.py  pyproject.toml  server.sh
css/: tabs.css
datasets/nyt/: excess-deaths.csv
notebooks/: Anomaly Detection.ipynb  Data.ipynb  EDA.ipynb  Forecasting.ipynb  Preprocessing.ipynb  data.py
notebooks/.ipynb_checkpoints/: Anomaly Detection-checkpoint.ipynb  Data-checkpoint.ipynb  Forecasting-checkpoint.ipynb  Preprocessing-checkpoint.ipynb
notebooks/exports/: florida-scaled.csv  florida.csv
notebooks/tutorials/: Multivariate Time Series Forecasting with LSTMs in Keras.ipynb
src/: full_pipeline_script.py
src/data/raw/nyt/: excess-deaths.csv
src/hyper_models/: cnn.py  stacked_gru.py
src/models/: base.py  cnn.py  stacked_lstm.py
src/processed_data/: florida.csv
templates/: index.html
